<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_app"
    tools:context=".PaymentActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/centurygothic"
        android:text="@string/datos_pago"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvMonto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/centurygothic"
                android:text="@string/monto_formato"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/centurygothic"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etNumeroTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/centurygothic"
                android:hint="@string/numero_tarjeta"
                android:inputType="number"
                android:maxLength="16"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerTipoTarjeta"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etFechaExp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/centurygothic"
                    android:hint="@string/fecha_expedicion"
                    android:inputType="phone"
                    android:maxLength="5"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etCVV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/centurygothic"
                    android:hint="@string/cvv"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/centurygothic"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnPagar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/ic_launcher_background"
                android:fontFamily="@font/centurygothic"
                android:text="@string/pagar"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>